# halo-atlassian-mcp

./: .dockerignore  .gitignore  .trivyignore  Dockerfile  README.md  Run-HaloAtlassian.ps1  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  promote.yml  rebuild.yml
docs/: accepted-risks.md  operations.md  threat-model.md  tool-reference.md
scripts/: bump-wrapper-digest.sh
setup/: Install-HaloAtlassianMcp.ps1  SetupForm.ps1  Test-Installation.ps1  Uninstall-HaloAtlassianMcp.ps1  Update-HaloAtlassianMcp.ps1
skills/: README.md
skills/halo-atlassian/: SKILL.md
src/halo_mcp_atlassian/: __init__.py  __main__.py  adf.py  client.py  config.py  logging.py  server.py
src/halo_mcp_atlassian/tools/: __init__.py  assets.py  confluence.py  jira.py
tests/: conftest.py  test_adf.py  test_assets.py  test_client.py  test_config.py  test_confluence_guards.py  test_jira_guards.py  test_logging_redaction.py  test_url_build.py  test_wrapper.ps1
wrapper/: CredentialStore.ps1  README.md  mcp-halo-atlassian.ps1
