[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halo-mcp-atlassian"
version = "0.1.0"
description = "Halo Studios local MCP server for Atlassian Cloud (Jira + Confluence)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Halo Studios IT Operations" }]
license = { text = "Proprietary" }
dependencies = [
  "mcp>=1.2.0,<2",
  "httpx>=0.27.0,<1",
  "structlog>=24.1.0,<26",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.scripts]
halo-mcp-atlassian = "halo_mcp_atlassian.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/halo_mcp_atlassian"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
